--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ very similar to the Unlicense.
                  style="font-size: 14px;
                  line-height: 1.5;
                  color: #24292e;
-                 box-sizing: border-box; float:left;"><br/><br/><hr/>
+                 box-sizing: border-box; float:left;"><br/><hr/>
                 <p class="text-small text-gray mb-0 lh-condensed-ultra">
                     OscarGonzalez1987/practica_inicial is licensed under the
                 </p>
@@ -249,7 +249,7 @@ very similar to the Unlicense.
                  style="font-size: 14px;
                  line-height: 1.5;
                  color: #24292e;
-                 box-sizing: border-box; float:right; text-align:right"><br/><br/><br/><hr/>
+                 box-sizing: border-box; float:right; text-align:right"><br/><br/><hr/>
                 <p class="text-small text-gray mb-0 lh-condensed-ultra" style="text-align:left">
                     Autor:
                 </p>
