--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ very similar to the Unlicense.
                  style="font-size: 14px;
                  line-height: 1.5;
                  color: #24292e;
-                 box-sizing: border-box; float:right; text-align:right"><br/><br/><br/><hr/>
+                 box-sizing: border-box; float:right; text-align:right"><br/><br/><hr/>
                 <p class="text-small text-gray mb-0 lh-condensed-ultra" style="text-align:left">
                     Autor:
                 </p>
