--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ very similar to the Unlicense.
     </head>
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-            <a class="navbar-brand" href="https://github.com/OscarGonzalez1987/practica_inicial">
+            <a class="navbar-brand" href="https://github.com/OscarGonzalez1987/practica_inicial/blob/master/index.html">
                 GitHub
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
