--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ very similar to the Unlicense.
                 </a><br/><br/>
             </div>
             <div class="col-sm-4" style="float:left">
-                <p>En internet encontrarás mucha información acerca de GIT Y GITHUB,
+                <p>En internet encontrarás mucha información acerca de Git Y GitHub,
                     pero es muy difícil encontrar un marco de referencia, con el cual
-                    un aprendiz se pueda guiar de una manera práctica y didáctica 
-                    para aprender de una<br/> forma fácil y acelerada.</p>
+                    se tenga una guia práctica y didáctica para aprender de una forma
+                    fácil y acelerada.</p>
             </div>
             <div class="col-sm-4" style="float:left;">
                 <p> Precisamente por ello, he diseñado este marco de referencia
