--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ very similar to the Unlicense.
             </div>
             <div class="col-sm-4" style="float:left">
                 <p>En internet encontrarás mucha información acerca de Git Y GitHub,
-                    pero es muy difícil encontrar un marco de referencia, con el cual
-                    se tenga una guia práctica y didáctica para aprender de una forma
-                    fácil y acelerada.</p>
+                    pero es muy difícil una guía práctica y didáctica para aprender
+                    de una forma fácil y acelerada, en especial cuando hay tantas 
+                    cosas para aprender.</p>
             </div>
             <div class="col-sm-4" style="float:left;">
                 <p> Precisamente por ello, he diseñado este marco de referencia
