--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ very similar to the Unlicense.
                 <p> Precisamente por ello, he diseñado este marco de referencia
                     interactivo. La idea es crear material de calidad para compartir
                     información útil en procesos de aprendizaje.</p>                   
-                <p>Para reporte de fallas, errores, sugerencia o proyectos
+                <p>Para reporte de fallas, errores, sugerencia o proyectos,
                     escribir al whatsapp.</p>
             </div>
             <div id="boton_telefono" style="float:right;">          
