--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ very similar to the Unlicense.
                 <p>En internet encontrarás mucha información acerca de Git Y GitHub,
                     pero es muy difícil encontrar una guía práctica y didáctica para
                     aprender de una forma fácil y acelerada, en especial cuando hay
-                    tantas opciones. muchas paguinas optan por fragmentar los temas.</p>
+                    tantas opciones. Muchas páginas optan por fragmentar los temas.</p>
             </div>
             <div class="col-sm-4" style="float:left;">
                 <p> Precisamente por ello, he diseñado este marco de referencia
