--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@ very similar to the Unlicense.
                     <tr id="a1b">
                         <td colspan="5">
                             <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/carpeta.png"/>
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/seleccion_carpeta.png"/>
+                            
                         </td>
                     </tr>
                     <!--///////////////////////////////////////////////////////////////////////////////////////////////////////-->
