--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@ very similar to the Unlicense.
                         <td colspan="5">
                             <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/carpeta.png"/>
                             <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/seleccion_carpeta.png"/>
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/seleccion_carpeta_2.png"/>
                             
                         </td>
                     </tr>
