--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ very similar to the Unlicense.
                             <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/carpeta.png"/>
                             <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/seleccion_carpeta.png"/>
                             <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/seleccion_carpeta_2.png"/>
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/git_init.png"/>
                             
                         </td>
                     </tr>
