--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@ very similar to the Unlicense.
                         <td></td>
                         <td></td>
                     </tr>
+
+                    <tr id="a3b">
+                        <td colspan="5">
+                            <img src="https://raw.githubusercontent.com/OscarGonzalez1987/practica_inicial/master/captures/crear_archivo.png"/>
+                        </td>
+                    </tr>
                     <!--figura no existe  ///////////////////////////////////////-->
                     <tr id="a4a">
                         <td>Paso 4</td>
