--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ very similar to the Unlicense.
     <head>
         <title></title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link href="librerias/css/boton_whatsapp.css" rel="stylesheet" type="text/css"/>
 
