--- a/claro/vista/componentes/vista_celularjs.html
+++ b/claro/vista/componentes/vista_celularjs.html
@@ -81,7 +81,7 @@ function datosdeentrada(){
             "Aproximadam",
             "Android 9.0 (Pie)   EMUI ",
             "http://catalogo.claro.com.co/home/EquipoDetalle/Huawei-Y6-2019",
-            "http://repositorio.claro.com.co/phones/information/Hua_Y6_19/html/img/giro1.jpg",
+            "claro/imagenes/HuaweiY62019.jpg",//"http://repositorio.claro.com.co/phones/information/Hua_Y6_19/html/img/giro1.jpg",
             "SARCOkk"
         ];
 /* inserta los datos en una matriz de javascript */
