--- a/claro/vista/componentes/vista_celularjs.html
+++ b/claro/vista/componentes/vista_celularjs.html
@@ -81,7 +81,7 @@ function datosdeentrada(){
             "Aproximadam",
             "Android 9.0 (Pie)   EMUI ",
             "http://catalogo.claro.com.co/home/EquipoDetalle/Huawei-Y6-2019",
-            "http://catalogo.claro.com.co/home/EquipoDetalle/Huawei-Y7-2019",
+            "../imagenes/HuaweiY62019.jpg",
             "SARCOkk"
         ];
 /* inserta los datos en una matriz de javascript */
@@ -101,7 +101,7 @@ function datosdeentrada(){
             "",
             "Android 8.0 (Oreo)   EMUI",
             "http://catalogo.claro.com.co/home/EquipoDetalle/Huawei-Y7-2019",
-            "http://repositorio.claro.com.co/phones/information/HUA_Y7_19/html/img/giro1.jpg",
+            "../imagenes/HuaweiY72019.jpg",
             "ADCO"
         ];
 /* inserta los datos en una matriz de javascript */
