--- a/claro/vista/componentes/vista_celularjs.html
+++ b/claro/vista/componentes/vista_celularjs.html
@@ -122,7 +122,7 @@ function datosdeentrada(){
             "Duración e",
             "Android 9.0   EMUI 9.0.1",
             "http://catalogo.claro.com.co/home/EquipoDetalle/Huawei-P30-Lite-",
-            "http://repositorio.claro.com.co/phones/information/Hua_P30_LITE/html/img/giro1.jpg",
+            "../imagenes/HuaweiP30Lite.jpg",
             "ADCO"
         ];
 /* inserta los datos en una matriz de javascript */
@@ -142,7 +142,7 @@ function datosdeentrada(){
             "",
             "N/A",
             "http://catalogo.claro.com.co/home/EquipoDetalle/HUAWEI-Y9-PRIME-2019",
-            "http://repositorio.claro.com.co/phones/information/Huawei_prime_Y9/html/img/giro1.jpg",
+            "HUAWEIY9PRIME2019.jpg",
             ""
         ];
 }
