--- a/claro/vista/componentes/vista_celularjs.html
+++ b/claro/vista/componentes/vista_celularjs.html
@@ -142,7 +142,7 @@ function datosdeentrada(){
             "",
             "N/A",
             "http://catalogo.claro.com.co/home/EquipoDetalle/HUAWEI-Y9-PRIME-2019",
-            "HUAWEIY9PRIME2019.jpg",
+            "../imagenes/HUAWEIY9PRIME2019.jpg",
             ""
         ];
 }
