--- a/claro/vista/celularjs.html
+++ b/claro/vista/celularjs.html
@@ -9,7 +9,7 @@
 	<script src="../librerias/bootstrap/js/jquery-3.3.1.min.js"></script>
 	<script src="../librerias/bootstrap/js/bootstrap.js"></script>
 	<script src="../controlador/funciones_celular.js"></script>
-
+    <link rel="stylesheet" href="../librerias/boton_whatsapp.css">
     </head>
     <body id="body">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
