--- a/claro/vista/componentes/vista_celularjs.html
+++ b/claro/vista/componentes/vista_celularjs.html
@@ -168,7 +168,7 @@ console.log(datos);
     <div id="row2"></div>    
 </div>
 <div class="col-sm-2" style="background-color:white; min-height:700px">
-    <div class="col-sm-2" style="">
+    <div class="col-sm-2">
         <img id="img8gb" src="../imagenes/planes.png"><br>
     </div>
 </div>
@@ -291,8 +291,32 @@ function datosdesalida(){
         var tddatocelularImagen = document.createElement("td");
         var tddatocelularcasa = document.createElement("td");
 
+
         var imgcelular = document.createElement("IMG");
         var imgmodelo = document.createElement("IMG");      
+
+
+        var tablewhatsapp = document.createElement("table");
+        var trwhatsapp = document.createElement("tr");
+        var tdicono = document.createElement("td");
+        var tdboton_texto = document.createElement("td");
+
+        var imgwhatsapp = document.createElement("IMG");
+        var aboton_icono = document.createElement("a");
+
+        tablewhatsapp.className = "boton_telefono";
+        tdicono.className = "td_icono";
+        tdboton_texto.className = "boton_texto";
+        imgwhatsapp.className = "imgwhatsapp";
+        aboton_icono.className = "boton_icono";
+
+
+        tdicono.appendChild(imgwhatsapp);
+        tdboton_texto.appendChild(aboton_icono);
+        trwhatsapp.appendChild(tdicono);
+        trwhatsapp.appendChild(tdboton_texto);
+        tablewhatsapp.appendChild(trwhatsapp);
+
 
         row.className = "row";
 
@@ -424,6 +448,7 @@ function datosdesalida(){
 
         div11.appendChild(imgcelular);
         div12.appendChild(table);
+        div12.appendChild(tablewhatsapp);
         div13.appendChild(imgmodelo);
 
         row.appendChild(div10);    
@@ -469,8 +494,22 @@ function datosdesalida(){
             // imgmodelo.setAttribute("height", "228");
             imgmodelo.setAttribute("alt", "imgmodelo");
 
+            imgwhatsapp = document.getElementsByClassName("imgwhatsapp")[i];
+            imgwhatsapp.setAttribute("src", "data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iaXNvLTg4NTktMSI/Pgo8IURPQ1RZUEUgc3Zn%0D%0AIFBVQkxJQyAiLS8vVzNDLy9EVEQgU1ZHIDEuMS8vRU4iICJodHRwOi8vd3d3LnczLm9yZy9HcmFw%0D%0AaGljcy9TVkcvMS4xL0RURC9zdmcxMS5kdGQiPgo8c3ZnIHhtbG5zPSJodHRwOi8vd3d3LnczLm9y%0D%0AZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHZl%0D%0AcnNpb249IjEuMSIgaWQ9IkNhcGFfMSIgeD0iMHB4IiB5PSIwcHgiIHdpZHRoPSI1MTJweCIgaGVp%0D%0AZ2h0PSI1MTJweCIgdmlld0JveD0iMCAwIDkwIDkwIiBzdHlsZT0iZW5hYmxlLWJhY2tncm91bmQ6%0D%0AbmV3IDAgMCA5MCA5MDsiIHhtbDpzcGFjZT0icHJlc2VydmUiPgo8Zz4KCTxwYXRoIGlkPSJXaGF0%0D%0Ac0FwcCIgZD0iTTkwLDQzLjg0MWMwLDI0LjIxMy0xOS43NzksNDMuODQxLTQ0LjE4Miw0My44NDFj%0D%0ALTcuNzQ3LDAtMTUuMDI1LTEuOTgtMjEuMzU3LTUuNDU1TDAsOTBsNy45NzUtMjMuNTIyICAgYy00%0D%0ALjAyMy02LjYwNi02LjM0LTE0LjM1NC02LjM0LTIyLjYzN0MxLjYzNSwxOS42MjgsMjEuNDE2LDAs%0D%0ANDUuODE4LDBDNzAuMjIzLDAsOTAsMTkuNjI4LDkwLDQzLjg0MXogTTQ1LjgxOCw2Ljk4MiAgIGMt%0D%0AMjAuNDg0LDAtMzcuMTQ2LDE2LjUzNS0zNy4xNDYsMzYuODU5YzAsOC4wNjUsMi42MjksMTUuNTM0%0D%0ALDcuMDc2LDIxLjYxTDExLjEwNyw3OS4xNGwxNC4yNzUtNC41MzcgICBjNS44NjUsMy44NTEsMTIu%0D%0AODkxLDYuMDk3LDIwLjQzNyw2LjA5N2MyMC40ODEsMCwzNy4xNDYtMTYuNTMzLDM3LjE0Ni0zNi44%0D%0ANTdTNjYuMzAxLDYuOTgyLDQ1LjgxOCw2Ljk4MnogTTY4LjEyOSw1My45MzggICBjLTAuMjczLTAu%0D%0ANDQ3LTAuOTk0LTAuNzE3LTIuMDc2LTEuMjU0Yy0xLjA4NC0wLjUzNy02LjQxLTMuMTM4LTcuNC0z%0D%0ALjQ5NWMtMC45OTMtMC4zNTgtMS43MTctMC41MzgtMi40MzgsMC41MzcgICBjLTAuNzIxLDEuMDc2%0D%0ALTIuNzk3LDMuNDk1LTMuNDMsNC4yMTJjLTAuNjMyLDAuNzE5LTEuMjYzLDAuODA5LTIuMzQ3LDAu%0D%0AMjcxYy0xLjA4Mi0wLjUzNy00LjU3MS0xLjY3My04LjcwOC01LjMzMyAgIGMtMy4yMTktMi44NDgt%0D%0ANS4zOTMtNi4zNjQtNi4wMjUtNy40NDFjLTAuNjMxLTEuMDc1LTAuMDY2LTEuNjU2LDAuNDc1LTIu%0D%0AMTkxYzAuNDg4LTAuNDgyLDEuMDg0LTEuMjU1LDEuNjI1LTEuODgyICAgYzAuNTQzLTAuNjI4LDAu%0D%0ANzIzLTEuMDc1LDEuMDgyLTEuNzkzYzAuMzYzLTAuNzE3LDAuMTgyLTEuMzQ0LTAuMDktMS44ODNj%0D%0ALTAuMjctMC41MzctMi40MzgtNS44MjUtMy4zNC03Ljk3NyAgIGMtMC45MDItMi4xNS0xLjgwMy0x%0D%0ALjc5Mi0yLjQzNi0xLjc5MmMtMC42MzEsMC0xLjM1NC0wLjA5LTIuMDc2LTAuMDljLTAuNzIyLDAt%0D%0AMS44OTYsMC4yNjktMi44ODksMS4zNDQgICBjLTAuOTkyLDEuMDc2LTMuNzg5LDMuNjc2LTMuNzg5%0D%0ALDguOTYzYzAsNS4yODgsMy44NzksMTAuMzk3LDQuNDIyLDExLjExM2MwLjU0MSwwLjcxNiw3LjQ5%0D%0ALDExLjkyLDE4LjUsMTYuMjIzICAgQzU4LjIsNjUuNzcxLDU4LjIsNjQuMzM2LDYwLjE4Niw2NC4x%0D%0ANTZjMS45ODQtMC4xNzksNi40MDYtMi41OTksNy4zMTItNS4xMDdDNjguMzk4LDU2LjUzNyw2OC4z%0D%0AOTgsNTQuMzg2LDY4LjEyOSw1My45Mzh6IiBmaWxsPSIjRkZGRkZGIi8+CjwvZz4KPC9zdmc+Cg==");
+            imgwhatsapp.setAttribute("width", "20");
+            imgwhatsapp.setAttribute("height", "20");
+            imgwhatsapp.setAttribute("alt", "imgwhatsapp");
+
             document.getElementsByClassName("div100h1")[i].innerHTML = datos[i][1];
             document.getElementsByClassName("div101h1")[i].innerHTML = datos[i][2];
+
+
+            ruta = "https://web.whatsapp.com/send?phone=573228858439&text=Hola+Oscar%2C+he+visto+el+catálogo+de+celulares+smartphone+de+Claro+y+me+interesa+el+";
+            ruta += datos[i][1];
+            document.getElementsByClassName("boton_icono")[i].href = ruta;
+            document.getElementsByClassName("boton_icono")[i].innerText = 'Whatsapp';
+            document.getElementsByClassName("boton_icono")[i].target = '_blanck';
+
         }
     }
 
