--- a/claro/vista/componentes/vista_celularjs.html
+++ b/claro/vista/componentes/vista_celularjs.html
@@ -42,8 +42,8 @@
     .imgmodelo {
         position: absolute;
         top: 0px;
-        left: -60px;
-        clip: rect(0px,405px,500px,50px);
+        left: -85px;
+        clip: rect(0px,405px,500px,85px);
     }
 </style>
 
@@ -267,7 +267,7 @@ console.log(datos);
 <div class="col-sm-10">
     <div id="row2"></div>    
 </div>
-<div class="col-sm-2" style="background-color:white; min-height:700px">
+<div class="col-sm-2" style="background-color:white; min-height:700px;">
     <div class="col-sm-2">
         <img id="img8gb" src="../imagenes/planes.png"><br>
     </div>
@@ -427,20 +427,22 @@ function datosdesalida(){
         div101h1.className = "div101h1";
 
         div11.className = "col-sm-3";
+        div11.style.margin = "10px 50px 10px 0px";        
 
         div12.className = "col-sm-4";
         table.className = "table table-hover table-bordered table-responsive";
-
-        div13.className = "col-sm-3";
-        div13.style.height = "500px";
 
         div100.style.backgroundColor = "red";
         div100h1.style.color = "white";
         div101.style.backgroundColor = "yellow";
         div101h1.style.color = "black";
         div101h1.style.textAlign = "right";
-        div12.style.margin = "60px";
 
+        div12.style.margin = "10px 10px 10px 10px";
+
+        div13.className = "col-sm-3";
+        div13.style.height = "500px";
+        // div13.style.margin = "0px 0px 10px 4px";
 
 
 
