--- a/claro/vista/todos.html
+++ b/claro/vista/todos.html
@@ -2,8 +2,10 @@
 <html>
     <head>
 	<meta charset="UTF-8">
-	<title>Clientes</title>
+	<title>Todos</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="shortcut icon" href="claro.ico" />
+
 	<link rel="stylesheet" type="text/css" href="../librerias/bootstrap/css/bootstrap.css">
 
 	<script src="../librerias/bootstrap/js/jquery-3.3.1.min.js"></script>
@@ -24,7 +26,7 @@
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
 					<ul class="nav navbar-nav">
-						<li><a href="celularjs.html">Todos</a></li>
+						<li><a href="todos.html">Todos</a></li>
 						<li><a href="huawei.html">Huawei</a></li>
 						<li><a href="motorola.html">Motorola</a></li>
 						<li><a href="samsung.html">Samsung</a></li>
@@ -144,7 +146,7 @@
 	</div>
 	<script type="text/javascript">
 	    $(document).ready(function () {
-		$('#tabla').load('componentes/vista_celularjs.html');
+		$('#tabla').load('componentes/vista_todos.html');
 	    });
 	</script>
 	<script type="text/javascript">
