--- a/claro/vista/componentes/vista_todos.html
+++ b/claro/vista/componentes/vista_todos.html
@@ -634,7 +634,7 @@ function datosdesalida(){
             document.getElementsByClassName("div100h1")[i].innerHTML = datos[i][1];
             document.getElementsByClassName("div101h1")[i].innerHTML = datos[i][2];
 
-            ruta = "https://api.whatsapp.com/send?phone=573228858439&text=Hola%20Oscar%2C%20he%20visto%20el%20catálogo%20de%20celulares%20smartphone%20de%20Claro%20y%20me%20interesa%20el%20";
+            ruta = "https://api.whatsapp.com/send?phone=573234157471&text=Hola%20he%20visto%20el%20catálogo%20de%20celulares%20smartphone%20de%20Claro%20y%20me%20interesa%20el%20";
             ruta += datos[i][1];
             document.getElementsByClassName("boton_icono")[i].href = ruta;
             document.getElementsByClassName("boton_icono")[i].innerText = 'Whatsapp';
